--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^3.2.6"
   }
 }
